ast/src/snapshots/transmute_ast__ast_print__tests__arrays_if.snap
---
source: ast/src/ast_print.rs
expression: s
---
+- stmt 0
   +- Namespace name=<root>
      +- stmt 1
      |  +- Use std.env.args
      +- stmt 2
      |  +- Use std.list.list_get
      +- stmt 3
      |  +- Use std.numbers.number_parse
      +- stmt 4
      |  +- Use std.numbers.print
      +- stmt 10
         +- Fn name=main
            +- annotations=[]
            +- params=[]
            +- ret=[]
            +- body:expr 38
               +- Block
                  +- stmt 5
                  |  +- Let name=n
                  |     +- expr 6
                  |        +- Call
                  |           +- expr 0
                  |           |  +- Ident: number_parse
                  |           +- params
                  |              +- expr 5
                  |                 +- Call
                  |                    +- expr 1
                  |                    |  +- Ident: list_get
                  |                    +- params
                  |                       +- expr 3
                  |                       |  +- Call
                  |                       |     +- expr 2
                  |                       |     |  +- Ident: args
                  |                       |     +- params=[]
                  |                       +- expr 4
                  |                          +- Number: 1
                  +- stmt 8
                  |  +- Let name=n
                  |     +- expr 34
                  |        +- ArrayAccess
                  |           +- expr 32
                  |           |  +- If
                  |           |     +- cond:expr 7
                  |           |     |  +- Bool: true
                  |           |     +- true:expr 19
                  |           |     |  +- Block
                  |           |     |     +- stmt 6
                  |           |     |        +- Expression
                  |           |     |           +- expr 18
                  |           |     |              +- ArrayInstantiate
                  |           |     |                 +- expr 8
                  |           |     |                 |  +- Number: 0
                  |           |     |                 +- expr 9
                  |           |     |                 |  +- Number: 2
                  |           |     |                 +- expr 10
                  |           |     |                 |  +- Number: 4
                  |           |     |                 +- expr 11
                  |           |     |                 |  +- Number: 6
                  |           |     |                 +- expr 12
                  |           |     |                 |  +- Number: 8
                  |           |     |                 +- expr 13
                  |           |     |                 |  +- Number: 10
                  |           |     |                 +- expr 14
                  |           |     |                 |  +- Number: 12
                  |           |     |                 +- expr 15
                  |           |     |                 |  +- Number: 14
                  |           |     |                 +- expr 16
                  |           |     |                 |  +- Number: 16
                  |           |     |                 +- expr 17
                  |           |     |                    +- Number: 18
                  |           |     +- false:expr 31
                  |           |        +- Block
                  |           |           +- stmt 7
                  |           |              +- Expression
                  |           |                 +- expr 30
                  |           |                    +- ArrayInstantiate
                  |           |                       +- expr 20
                  |           |                       |  +- Number: 1
                  |           |                       +- expr 21
                  |           |                       |  +- Number: 3
                  |           |                       +- expr 22
                  |           |                       |  +- Number: 5
                  |           |                       +- expr 23
                  |           |                       |  +- Number: 7
                  |           |                       +- expr 24
                  |           |                       |  +- Number: 9
                  |           |                       +- expr 25
                  |           |                       |  +- Number: 11
                  |           |                       +- expr 26
                  |           |                       |  +- Number: 13
                  |           |                       +- expr 27
                  |           |                       |  +- Number: 15
                  |           |                       +- expr 28
                  |           |                       |  +- Number: 17
                  |           |                       +- expr 29
                  |           |                          +- Number: 19
                  |           +- expr 33
                  |              +- Ident: n
                  +- stmt 9
                     +- Expression
                        +- expr 37
                           +- Call
                              +- expr 35
                              |  +- Ident: print
                              +- params
                                 +- expr 36
                                    +- Ident: n
