ast/src/snapshots/transmute_ast__ast_print__tests__arrays_nested.snap
---
source: ast/src/ast_print.rs
expression: s
---
+- stmt 0
   +- Namespace name=<root>
      +- stmt 1
      |  +- Use std.env.args
      +- stmt 2
      |  +- Use std.list.list_get
      +- stmt 3
      |  +- Use std.numbers.number_parse
      +- stmt 4
      |  +- Use std.numbers.print
      +- stmt 8
         +- Fn name=main
            +- annotations=[]
            +- params=[]
            +- ret=[]
            +- body:expr 125
               +- Block
                  +- stmt 5
                  |  +- Let name=n
                  |     +- expr 6
                  |        +- Call
                  |           +- expr 0
                  |           |  +- Ident: number_parse
                  |           +- params
                  |              +- expr 5
                  |                 +- Call
                  |                    +- expr 1
                  |                    |  +- Ident: list_get
                  |                    +- params
                  |                       +- expr 3
                  |                       |  +- Call
                  |                       |     +- expr 2
                  |                       |     |  +- Ident: args
                  |                       |     +- params=[]
                  |                       +- expr 4
                  |                          +- Number: 1
                  +- stmt 6
                  |  +- Let name=n
                  |     +- expr 121
                  |        +- ArrayAccess
                  |           +- expr 119
                  |           |  +- ArrayAccess
                  |           |     +- expr 117
                  |           |     |  +- ArrayInstantiate
                  |           |     |     +- expr 17
                  |           |     |     |  +- ArrayInstantiate
                  |           |     |     |     +- expr 7
                  |           |     |     |     |  +- Number: 0
                  |           |     |     |     +- expr 8
                  |           |     |     |     |  +- Number: 1
                  |           |     |     |     +- expr 9
                  |           |     |     |     |  +- Number: 2
                  |           |     |     |     +- expr 10
                  |           |     |     |     |  +- Number: 3
                  |           |     |     |     +- expr 11
                  |           |     |     |     |  +- Number: 4
                  |           |     |     |     +- expr 12
                  |           |     |     |     |  +- Number: 5
                  |           |     |     |     +- expr 13
                  |           |     |     |     |  +- Number: 6
                  |           |     |     |     +- expr 14
                  |           |     |     |     |  +- Number: 7
                  |           |     |     |     +- expr 15
                  |           |     |     |     |  +- Number: 8
                  |           |     |     |     +- expr 16
                  |           |     |     |        +- Number: 9
                  |           |     |     +- expr 28
                  |           |     |     |  +- ArrayInstantiate
                  |           |     |     |     +- expr 18
                  |           |     |     |     |  +- Number: 10
                  |           |     |     |     +- expr 19
                  |           |     |     |     |  +- Number: 11
                  |           |     |     |     +- expr 20
                  |           |     |     |     |  +- Number: 12
                  |           |     |     |     +- expr 21
                  |           |     |     |     |  +- Number: 13
                  |           |     |     |     +- expr 22
                  |           |     |     |     |  +- Number: 14
                  |           |     |     |     +- expr 23
                  |           |     |     |     |  +- Number: 15
                  |           |     |     |     +- expr 24
                  |           |     |     |     |  +- Number: 16
                  |           |     |     |     +- expr 25
                  |           |     |     |     |  +- Number: 17
                  |           |     |     |     +- expr 26
                  |           |     |     |     |  +- Number: 18
                  |           |     |     |     +- expr 27
                  |           |     |     |        +- Number: 19
                  |           |     |     +- expr 39
                  |           |     |     |  +- ArrayInstantiate
                  |           |     |     |     +- expr 29
                  |           |     |     |     |  +- Number: 20
                  |           |     |     |     +- expr 30
                  |           |     |     |     |  +- Number: 21
                  |           |     |     |     +- expr 31
                  |           |     |     |     |  +- Number: 22
                  |           |     |     |     +- expr 32
                  |           |     |     |     |  +- Number: 23
                  |           |     |     |     +- expr 33
                  |           |     |     |     |  +- Number: 24
                  |           |     |     |     +- expr 34
                  |           |     |     |     |  +- Number: 25
                  |           |     |     |     +- expr 35
                  |           |     |     |     |  +- Number: 26
                  |           |     |     |     +- expr 36
                  |           |     |     |     |  +- Number: 27
                  |           |     |     |     +- expr 37
                  |           |     |     |     |  +- Number: 28
                  |           |     |     |     +- expr 38
                  |           |     |     |        +- Number: 29
                  |           |     |     +- expr 50
                  |           |     |     |  +- ArrayInstantiate
                  |           |     |     |     +- expr 40
                  |           |     |     |     |  +- Number: 20
                  |           |     |     |     +- expr 41
                  |           |     |     |     |  +- Number: 31
                  |           |     |     |     +- expr 42
                  |           |     |     |     |  +- Number: 32
                  |           |     |     |     +- expr 43
                  |           |     |     |     |  +- Number: 33
                  |           |     |     |     +- expr 44
                  |           |     |     |     |  +- Number: 34
                  |           |     |     |     +- expr 45
                  |           |     |     |     |  +- Number: 35
                  |           |     |     |     +- expr 46
                  |           |     |     |     |  +- Number: 36
                  |           |     |     |     +- expr 47
                  |           |     |     |     |  +- Number: 37
                  |           |     |     |     +- expr 48
                  |           |     |     |     |  +- Number: 38
                  |           |     |     |     +- expr 49
                  |           |     |     |        +- Number: 39
                  |           |     |     +- expr 61
                  |           |     |     |  +- ArrayInstantiate
                  |           |     |     |     +- expr 51
                  |           |     |     |     |  +- Number: 40
                  |           |     |     |     +- expr 52
                  |           |     |     |     |  +- Number: 41
                  |           |     |     |     +- expr 53
                  |           |     |     |     |  +- Number: 42
                  |           |     |     |     +- expr 54
                  |           |     |     |     |  +- Number: 43
                  |           |     |     |     +- expr 55
                  |           |     |     |     |  +- Number: 44
                  |           |     |     |     +- expr 56
                  |           |     |     |     |  +- Number: 45
                  |           |     |     |     +- expr 57
                  |           |     |     |     |  +- Number: 46
                  |           |     |     |     +- expr 58
                  |           |     |     |     |  +- Number: 47
                  |           |     |     |     +- expr 59
                  |           |     |     |     |  +- Number: 48
                  |           |     |     |     +- expr 60
                  |           |     |     |        +- Number: 49
                  |           |     |     +- expr 72
                  |           |     |     |  +- ArrayInstantiate
                  |           |     |     |     +- expr 62
                  |           |     |     |     |  +- Number: 50
                  |           |     |     |     +- expr 63
                  |           |     |     |     |  +- Number: 51
                  |           |     |     |     +- expr 64
                  |           |     |     |     |  +- Number: 52
                  |           |     |     |     +- expr 65
                  |           |     |     |     |  +- Number: 53
                  |           |     |     |     +- expr 66
                  |           |     |     |     |  +- Number: 54
                  |           |     |     |     +- expr 67
                  |           |     |     |     |  +- Number: 55
                  |           |     |     |     +- expr 68
                  |           |     |     |     |  +- Number: 56
                  |           |     |     |     +- expr 69
                  |           |     |     |     |  +- Number: 57
                  |           |     |     |     +- expr 70
                  |           |     |     |     |  +- Number: 58
                  |           |     |     |     +- expr 71
                  |           |     |     |        +- Number: 59
                  |           |     |     +- expr 83
                  |           |     |     |  +- ArrayInstantiate
                  |           |     |     |     +- expr 73
                  |           |     |     |     |  +- Number: 60
                  |           |     |     |     +- expr 74
                  |           |     |     |     |  +- Number: 61
                  |           |     |     |     +- expr 75
                  |           |     |     |     |  +- Number: 62
                  |           |     |     |     +- expr 76
                  |           |     |     |     |  +- Number: 63
                  |           |     |     |     +- expr 77
                  |           |     |     |     |  +- Number: 64
                  |           |     |     |     +- expr 78
                  |           |     |     |     |  +- Number: 65
                  |           |     |     |     +- expr 79
                  |           |     |     |     |  +- Number: 66
                  |           |     |     |     +- expr 80
                  |           |     |     |     |  +- Number: 67
                  |           |     |     |     +- expr 81
                  |           |     |     |     |  +- Number: 68
                  |           |     |     |     +- expr 82
                  |           |     |     |        +- Number: 69
                  |           |     |     +- expr 94
                  |           |     |     |  +- ArrayInstantiate
                  |           |     |     |     +- expr 84
                  |           |     |     |     |  +- Number: 70
                  |           |     |     |     +- expr 85
                  |           |     |     |     |  +- Number: 71
                  |           |     |     |     +- expr 86
                  |           |     |     |     |  +- Number: 72
                  |           |     |     |     +- expr 87
                  |           |     |     |     |  +- Number: 73
                  |           |     |     |     +- expr 88
                  |           |     |     |     |  +- Number: 74
                  |           |     |     |     +- expr 89
                  |           |     |     |     |  +- Number: 75
                  |           |     |     |     +- expr 90
                  |           |     |     |     |  +- Number: 76
                  |           |     |     |     +- expr 91
                  |           |     |     |     |  +- Number: 77
                  |           |     |     |     +- expr 92
                  |           |     |     |     |  +- Number: 78
                  |           |     |     |     +- expr 93
                  |           |     |     |        +- Number: 79
                  |           |     |     +- expr 105
                  |           |     |     |  +- ArrayInstantiate
                  |           |     |     |     +- expr 95
                  |           |     |     |     |  +- Number: 80
                  |           |     |     |     +- expr 96
                  |           |     |     |     |  +- Number: 81
                  |           |     |     |     +- expr 97
                  |           |     |     |     |  +- Number: 82
                  |           |     |     |     +- expr 98
                  |           |     |     |     |  +- Number: 83
                  |           |     |     |     +- expr 99
                  |           |     |     |     |  +- Number: 84
                  |           |     |     |     +- expr 100
                  |           |     |     |     |  +- Number: 85
                  |           |     |     |     +- expr 101
                  |           |     |     |     |  +- Number: 86
                  |           |     |     |     +- expr 102
                  |           |     |     |     |  +- Number: 87
                  |           |     |     |     +- expr 103
                  |           |     |     |     |  +- Number: 88
                  |           |     |     |     +- expr 104
                  |           |     |     |        +- Number: 89
                  |           |     |     +- expr 116
                  |           |     |        +- ArrayInstantiate
                  |           |     |           +- expr 106
                  |           |     |           |  +- Number: 90
                  |           |     |           +- expr 107
                  |           |     |           |  +- Number: 91
                  |           |     |           +- expr 108
                  |           |     |           |  +- Number: 92
                  |           |     |           +- expr 109
                  |           |     |           |  +- Number: 93
                  |           |     |           +- expr 110
                  |           |     |           |  +- Number: 94
                  |           |     |           +- expr 111
                  |           |     |           |  +- Number: 95
                  |           |     |           +- expr 112
                  |           |     |           |  +- Number: 96
                  |           |     |           +- expr 113
                  |           |     |           |  +- Number: 97
                  |           |     |           +- expr 114
                  |           |     |           |  +- Number: 98
                  |           |     |           +- expr 115
                  |           |     |              +- Number: 99
                  |           |     +- expr 118
                  |           |        +- Ident: n
                  |           +- expr 120
                  |              +- Ident: n
                  +- stmt 7
                     +- Expression
                        +- expr 124
                           +- Call
                              +- expr 122
                              |  +- Ident: print
                              +- params
                                 +- expr 123
                                    +- Ident: n
